--- a/221812528535.html
+++ b/221812528535.html
@@ -1,9 +1,10 @@
+
 <!doctype html>
 <html>
 <head>
   <title>HELLO</title>
   <meta charset="utf-8">
   <p style="font-size:15px; color:#000000; family:'돋움'";>
-    갑자기 일로 와짐 ㅋ ?</p>
+    블로그 도메인 버그인가요?</p>
 </body>
 </html>
